--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     class="mask mask-star-2 bg-orange-400"
                   />
                 </div>
-                <h2 class="card-title">K. Accessories</h2>
+                <h2 class="card-title">Cutting Board</h2>
                 <p id="product-price">25.00 Tk</p>
               </div>
             </div>
